Cardigan JavaScript test updated for cards test

--- a/index.html
+++ b/index.html
@@ -281,18 +281,148 @@
                     </div>
                     <div class="row buttons-row">
                         <div class="col col-lg-2">
-                            <button type="button" class="btn btn-info" data-toggle="button"
+                            <button id="btn-cardigan-activities" type="button" class="btn btn-info" data-toggle="button"
                                 aria-pressed="false">Activities</button>
                         </div>
                         <div class="col col-lg-2">
-                            <button type="button" class="btn btn-info" data-toggle="button"
-                                aria-pressed="false">Restaurants</button>
+                            <button id="btn-cardigan-restaurants" type="button" class="btn btn-info"
+                                data-toggle="button" aria-pressed="false">Restaurants</button>
                         </div>
                         <div class="col col-lg-2">
-                            <button type="button" class="btn btn-info" data-toggle="button"
+                            <button id="btn-cardigan-hotels" type="button" class="btn btn-info" data-toggle="button"
                                 aria-pressed="false">Hotels</button>
                         </div>
                     </div>
+
+                    <!-- Cardigan Activities Interest cards -->
+
+                    <div id="cardigan-activities-int">
+                        <div>
+                            <h2 class="int-head"> Recommendations</h2>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-sm-4 int-cards">
+                                <div class="card mx-auto h-100">
+                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <div class="card-body d-flex flex-column">
+                                        <h5 class="card-title-int card-head">a recommended activity</h5>
+                                        <p class="card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                            info</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-4 int-cards">
+                                <div class="card mx-auto h-100">
+                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <div class="card-body d-flex flex-column">
+                                        <h5 class="card-title-int card-head">a recommended activity</h5>
+                                        <p class="card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                            info</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-4 int-cards">
+                                <div class="card mx-auto h-100">
+                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <div class="card-body d-flex flex-column">
+                                        <h5 class="card-title-int card-head">a recommended activity</h5>
+                                        <p class="card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                            info</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Cardigan Restaurants Interest cards -->
+
+                    <div id="cardigan-restaurants-int">
+                        <div>
+                            <h2 class="int-head"> Recommendations</h2>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-sm-4 int-cards">
+                                <div class="card mx-auto h-100">
+                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <div class="card-body d-flex flex-column">
+                                        <h5 class="card-title-int card-head">a recommended restaurant</h5>
+                                        <p class="card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                            info</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-4 int-cards">
+                                <div class="card mx-auto h-100">
+                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <div class="card-body d-flex flex-column">
+                                        <h5 class="card-title-int card-head">a recommended restaurant</h5>
+                                        <p class="card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                            info</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-4 int-cards">
+                                <div class="card mx-auto h-100">
+                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <div class="card-body d-flex flex-column">
+                                        <h5 class="card-title-int card-head">a recommended restaurant</h5>
+                                        <p class="card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                            info</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Cardigan Hotels Interest cards -->
+
+                    <div id="cardigan-hotels-int">
+                        <div>
+                            <h2 class="int-head"> Recommendations</h2>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-sm-4 int-cards">
+                                <div class="card mx-auto h-100">
+                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <div class="card-body d-flex flex-column">
+                                        <h5 class="card-title-int card-head">a recommended Hotel</h5>
+                                        <p class="card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                            info</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-4 int-cards">
+                                <div class="card mx-auto h-100">
+                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <div class="card-body d-flex flex-column">
+                                        <h5 class="card-title-int card-head">a recommended Hotel</h5>
+                                        <p class="card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                            info</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-4 int-cards">
+                                <div class="card mx-auto h-100">
+                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <div class="card-body d-flex flex-column">
+                                        <h5 class="card-title-int card-head">a recommended Hotel</h5>
+                                        <p class="card-text-int card-content"> blah blah blah</p>
+                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                            info</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -333,22 +463,22 @@
                     </div>
                     <div class="row buttons-row">
                         <div class="col col-lg-2">
-                            <button id="btn-activities" type="button" class="btn btn-info" data-toggle="button"
+                            <button id="btn-skye-activities" type="button" class="btn btn-info" data-toggle="button"
                                 aria-pressed="false">Activities</button>
                         </div>
                         <div class="col col-lg-2">
-                            <button id="btn-restaurants" type="button" class="btn btn-info" data-toggle="button"
+                            <button id="btn-skye-restaurants" type="button" class="btn btn-info" data-toggle="button"
                                 aria-pressed="false">Restaurants</button>
                         </div>
                         <div class="col col-lg-2">
-                            <button id="btn-hotels" type="button" class="btn btn-info" data-toggle="button"
+                            <button id="btn-skye-hotels" type="button" class="btn btn-info" data-toggle="button"
                                 aria-pressed="false">Hotels</button>
                         </div>
                     </div>
 
-                    <!-- Activities Interest cards -->
+                    <!-- Skye Activities Interest cards -->
 
-                    <div id="activities-int">
+                    <div id="skye-activities-int">
                         <div>
                             <h2 class="int-head"> Recommendations</h2>
                         </div>
@@ -389,9 +519,9 @@
                         </div>
                     </div>
 
-                    <!-- Restaurants Interest cards -->
+                    <!-- Skye Restaurants Interest cards -->
 
-                    <div id="restaurants-int">
+                    <div id="skye-restaurants-int">
                         <div>
                             <h2 class="int-head"> Recommendations</h2>
                         </div>
@@ -432,9 +562,9 @@
                         </div>
                     </div>
 
-                    <!-- Hotels Interest cards -->
+                    <!-- Skye Hotels Interest cards -->
 
-                    <div id="hotels-int">
+                    <div id="skye-hotels-int">
                         <div>
                             <h2 class="int-head"> Recommendations</h2>
                         </div>
@@ -569,7 +699,8 @@
 </script> -->
 
 <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap&libraries=places" async>
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap&libraries=places"
+    async>
 </script>
 
 <script src="assets/js/script.js"></script>
