Newquay activity and restaurant cards updated with content

--- a/index.html
+++ b/index.html
@@ -493,38 +493,74 @@
 
                     <div id="newquay-activities-int">
                         <div>
-                            <h2 class="int-head"> Recommendations</h2>
+                            <h2 class="int-head">Activity Recommendations</h2>
                         </div>
                         <div class="row">
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
-                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <img src="assets/images/card-images/Newquay-activity/Newquay-card-zoo.jpg"
+                                        class="card-img-top" alt="">
                                     <div class="card-body d-flex flex-column">
-                                        <h5 class="card-title-int card-head">a recommended activity</h5>
-                                        <p class="card-text-int card-content"> blah blah blah</p>
-                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                        <h5 class="card-title-int card-head">Newquay Zoo</h5>
+                                        <p class="card-text-int card-content">Get close to over 1,000 of the world’s
+                                            rarest and endangered animals at Newquay Zoo.
+                                            <br>
+                                            Located on the north coast of Cornwall, surrounded by 13 acres of lush
+                                            tropical gardens it's a visitor attraction where you can run wild, explore
+                                            and release your inner animal.
+                                            <br>
+                                            Watch the lions devour their lunch and then head to the Village Farm to meet
+                                            some familiar faces. If that isn’t enough, there are activity trails, two
+                                            children's play areas and Dragon maze to keep the little ones busy.</p>
+                                        <a href="https://www.newquayzoo.org.uk/" target="_blank"
+                                            class="btn btn-info mt-auto">more
                                             info</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
-                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <img src="assets/images/card-images/Newquay-activity/Newquay-card-escape.png"
+                                        class="card-img-top" alt="">
                                     <div class="card-body d-flex flex-column">
-                                        <h5 class="card-title-int card-head">a recommended activity</h5>
-                                        <p class="card-text-int card-content"> blah blah blah</p>
-                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                        <h5 class="card-title-int card-head">Escape Surf School</h5>
+                                        <p class="card-text-int card-content">
+                                            Escape are a Specialist Surf School that only teach Surfing.
+                                            They have been teaching people to surf for over 17 years and as well as
+                                            being one of the longest running UK Surf Schools it boasts not one, but two
+                                            Ex-Professional Surfers on their Full Time Coaching Team.
+                                            <br>
+                                            Teaching complete beginners but also teach Intermediate and
+                                            Advanced Surf Coaching and offer
+                                            outback, technical & progressive surf lessons on a daily basis.
+                                        </p>
+                                        <a href="https://www.escapesurfschool.co.uk/" target="_blank"
+                                            class="btn btn-info mt-auto">more
                                             info</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
-                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <img src="assets/images/card-images/Newquay-activity/Newquay-card-flambards.jpg"
+                                        class="card-img-top" alt="">
                                     <div class="card-body d-flex flex-column">
-                                        <h5 class="card-title-int card-head">a recommended activity</h5>
-                                        <p class="card-text-int card-content"> blah blah blah</p>
-                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                        <h5 class="card-title-int card-head">Flambards Theme Park</h5>
+                                        <p class="card-text-int card-content">Flambards Theme Park is the biggest family
+                                            fun day out in Cornwall with plenty of great things to do!
+                                            <br>
+                                            There are amazing rides for thrill-seekers! Explore the cobbled streets of
+                                            the life-sized Victorian Village and visit over 50 sets and scenes filled
+                                            with over 50,000 genuine artefacts. Discover the life-sized replica of a
+                                            London street during World War II in the Britain in the Blitz attraction.
+                                            <br>
+                                            Take a spin on the Hornet Rollercoaster and check out the view from the top
+                                            of SkyRaker, the twisting drop ride.
+                                            <br>
+                                            Flambards has got the fun factor that is sure to impress!
+                                        </p>
+                                        <a href="https://www.flambards.co.uk/" target="_blank"
+                                            class="btn btn-info mt-auto">more
                                             info</a>
                                     </div>
                                 </div>
@@ -536,38 +572,68 @@
 
                     <div id="newquay-restaurants-int">
                         <div>
-                            <h2 class="int-head"> Recommendations</h2>
+                            <h2 class="int-head">Restaurant Recommendations</h2>
                         </div>
                         <div class="row">
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
-                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <img src="assets/images/card-images/Newquay-restaurants/Newquay-card-stable.jpg"
+                                        class="card-img-top" alt="">
                                     <div class="card-body d-flex flex-column">
-                                        <h5 class="card-title-int card-head">a recommended restaurant</h5>
-                                        <p class="card-text-int card-content"> blah blah blah</p>
-                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                        <h5 class="card-title-int card-head">Stable Pizza</h5>
+                                        <p class="card-text-int card-content">A laidback place to meet and eat - serving
+                                            up seriously good pizza, alongside pints of beer, cider and crafted drinks.
+                                            <br>
+                                            With a panoramic perspective out to sea from inside and out, killer views
+                                            over one of Britain's most famous beaches, Fistral.</p>
+                                        <a href="https://fistral.stablepizza.com/" target="_blank"
+                                            class="btn btn-info mt-auto">more
                                             info</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
-                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <img src="assets/images/card-images/Newquay-restaurants/Newquay-card-kahuna.jpg"
+                                        class="card-img-top" alt="">
                                     <div class="card-body d-flex flex-column">
-                                        <h5 class="card-title-int card-head">a recommended restaurant</h5>
-                                        <p class="card-text-int card-content"> blah blah blah</p>
-                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                        <h5 class="card-title-int card-head">Kahuna</h5>
+                                        <p class="card-text-int card-content">Pan Asian inspired menu is great for those
+                                            who are looking to try something new or for
+                                            those who simply want to reawaken their travelling culinary experiences.
+                                            <br>
+                                            A good selection of vegetarian dishes & homemade desserts
+                                            are a must have.
+                                            Kahuna’s chef’s always deliver on flavour !
+
+                                            Our tropical modern Asian decor creates a comfortable relaxed dining
+                                            experience.</p>
+                                        <a href="https://www.kahunarestaurant.co.uk/" target="_blank"
+                                            class="btn btn-info mt-auto">more
                                             info</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
-                                    <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
+                                    <img src="assets/images/card-images/Newquay-restaurants/Newquay-card-fishhouse.jpg"
+                                        class="card-img-top" alt="">
                                     <div class="card-body d-flex flex-column">
-                                        <h5 class="card-title-int card-head">a recommended restaurant</h5>
-                                        <p class="card-text-int card-content"> blah blah blah</p>
-                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                        <h5 class="card-title-int card-head">The Fish House</h5>
+                                        <p class="card-text-int card-content">The Fish House is a sea food restaurant in
+                                            Newquay located on the world famous surfing beach, Fistral Beach and is just
+                                            a stones throw from the sea. 
+                                            <br>
+                                            The inspiration comes straight
+                                            from the sea, using locally caught fish and shell fish straight from Newquay
+                                            harbour. Using the best seasonal ingredients available, to create rustic
+                                            dishes with authentic flavours. 
+                                            <br>
+                                            What better way to finish a day on the beach
+                                            than watching the sunset eating amazing food and soaking up the atmosphere!
+                                        </p>
+                                        <a href="https://www.thefishhousefistral.com/" target="_blank"
+                                            class="btn btn-info mt-auto">more
                                             info</a>
                                     </div>
                                 </div>
@@ -579,16 +645,16 @@
 
                     <div id="newquay-hotels-int">
                         <div>
-                            <h2 class="int-head"> Recommendations</h2>
+                            <h2 class="int-head">Hotel Recommendations</h2>
                         </div>
                         <div class="row">
                             <div class="col-12 col-sm-4 int-cards">
                                 <div class="card mx-auto h-100">
                                     <img src="assets/images/brighton-pier.jpg" class="card-img-top" alt="">
                                     <div class="card-body d-flex flex-column">
-                                        <h5 class="card-title-int card-head">a recommended Hotel</h5>
+                                        <h5 class="card-title-int card-head">The Headland</h5>
                                         <p class="card-text-int card-content"> blah blah blah</p>
-                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                        <a href="https://www.headlandhotel.co.uk/" target="_blank" class="btn btn-info mt-auto">more
                                             info</a>
                                     </div>
                                 </div>
