Responsive images and text updated

--- a/index.html
+++ b/index.html
@@ -244,12 +244,9 @@
                                         alt="Brighton's sea life centre">
                                     <div class="card-body d-flex flex-column">
                                         <h5 class="card-title-int card-head">Brighton Sea Life Centre</h5>
-                                        <p class="card-text-int card-content">Built in 1872 and features 5,500
+                                        <p class="card-text-int card-content">Features 5,500
                                             mesmerising creatures including Rays, Sharks, Turtles, Terrapins, Star Fish,
                                             Seahorses and an Anaconda!
-                                            <br>
-                                            At SEA LIFE Brighton you can see them all -
-                                            from the curious and the rescued to the rare and the enigmatic.
                                             <br>
                                         </p>
                                         <a href="https://www.visitsealife.com/brighton/" target="_blank"
@@ -291,8 +288,7 @@
                                         alt="Brighton's Baqueano restaurant">
                                     <div class="card-body d-flex flex-column">
                                         <h5 class="card-title-int card-head">Baqueano</h5>
-                                        <p class="card-text-int card-content">Baqueano Brighton serves authentic
-                                            Argentinian cuisine and is the only Argentinian restaurant in Brighton that
+                                        <p class="card-text-int card-content">Baqueano is the only Argentinian restaurant in Brighton that
                                             serves Entraña (skirt steak) and Mollejas (sweetbread).
                                             <br>
                                         </p>
@@ -1162,7 +1158,7 @@
             Britain
             and also sign up for our free email newsletter for the latest updates</p>
 
-        <form onsubmit="sendMail(this); alert('Thanks for getting in touch, we will contact you soon.'); return">
+        <form id="background-teddy" onsubmit="sendMail(this); alert('Thanks for getting in touch, we will contact you soon.'); return">
 
             <input type="text" name="name" class="form-control" placeholder="Name:" id="name" required>
             <br>
@@ -1176,12 +1172,6 @@
                 <button type="submit" class="btn btn-outline-info">Submit</button>
             </div>
         </form>
-    </div>
-
-    <!-- Farewell image -->
-
-    <div class="container teddy">
-        <img class="img-fluid" src="assets/images/luggage-teddy.jpg" alt="Sepia image of a teddy in an open suitcase">
     </div>
 
     <footer class="footer">
